--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
     "url": "https://github.com/valerieseer/hello/issues"
   },
   "homepage": "https://github.com/valerieseer/hello#readme",
-  "dependencies": {
-    "gulp": "^4.0.2",
-    "gulp-sass": "^4.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-compile-handlebars": "^0.6.1",
     "gulp-data": "^1.3.1",
-    "gulp-hb": "^8.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-minify": "^3.1.0",
-    "gulp-rename": "^2.0.0"
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0"
   }
 }
