--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-data": "^1.3.1",
     "gulp-imagemin": "^7.1.0",
